# gameframework

./: .gitignore  ACTIVITY_CONTEXT_FIX_SUMMARY.md  ACTIVITY_CONTEXT_VERIFICATION.md  ALL_FIXES_COMPLETE.md  ANALYZE_FIX.md  CHANGELOG.md  CI_CD_SETUP_COMPLETE.md  CI_CD_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE.md  EXAMPLE_INFO_ISSUES_FIX.md  IOS_BUILD_FIXES.md  LICENSE  MAKEFILE_LINT_FIX.md  MAKEFILE_UPDATE_SUMMARY.md  MONOREPO_MAKEFILE.md  Makefile  OPTIONAL_FEATURES_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PLATFORM_CODE_CONSOLIDATION.md  PLATFORM_VIEW_MODES_FEATURE.md  PLATFORM_VIEW_RACE_COMPLETE_FIX.md  PLATFORM_VIEW_REGISTRATION_FIX.md  PLUGIN_SOURCE_UPDATE.md  PROJECT_STRUCTURE.md  PUBDEV_PREPARATION_SUMMARY.md  PUBLISHING_GUIDE.md  README.md  SESSION_COMPLETE_SUMMARY.md  STREAMING_ARCHITECTURE.md  TEST_FAILURES_FIX.md  UNITY_IOS_INTEGRATION_GUIDE.md  UNITY_PACKAGE_CLEANUP.md  UNREAL_ENGINE_IMPLEMENTATION_COMPLETE.md  UNREAL_ENGINE_IMPLEMENTATION_PLAN.md  UNREAL_ENGINE_STATUS.md  WORKFLOW_FIX_SUMMARY.md  pubspec.yaml
.github/: DOC.md  QUICK_REFERENCE.md  RELEASE_CHECKLIST.md  RELEASE_WORKFLOW.md  SECURITY.md  WORKFLOW_FIX.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
android/: build.gradle
cli/: README.md  example.game.yml  pubspec.yaml
engines/: README.md
engines/unity/: README.md
engines/unreal/: README.md
engines/unreal/dart/windows/: CMakeLists.txt  unreal_engine_plugin.cpp
example/: .game.yml  README.md  pubspec.yaml
example/android/: gradle.properties  settings.gradle
example/integration_test/: plugin_integration_test.dart  unity_embedding_test.dart
example/ios/: Podfile
example/lib/: main.dart  platform_view_modes_example.dart  unreal_example.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/Classes/: GameframeworkPlugin.swift
lib/: gameframework.dart  gameframework_method_channel.dart
linux/: CMakeLists.txt  gameframework_plugin_private.h
linux/test/: gameframework_plugin_test.cc
macos/: gameframework.podspec
macos/Classes/: GameframeworkPlugin.swift
scripts/: README.md  dev.sh
templates/unity/: link.xml
templates/unreal/: BLUEPRINT_SETUP.md
test/: gameframework_method_channel_test.dart  gameframework_test.dart
windows/: CMakeLists.txt  gameframework_plugin_c_api.cpp
(+204 files in other folders)
